# experimental

./: README.md  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: ai-eval.md  api.md  architecture.md  cli.md  goals.md  how-it-works.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: AgentGraph.vue  EventLog.vue  GoalStatus.vue  HumanCheckModal.vue  RunControls.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/stores/: eventStore.ts  runStore.ts
retrai/: __init__.py  config.py
retrai/agent/: graph.py  routers.py  state.py
retrai/agent/nodes/: act.py  evaluate.py  human_check.py  plan.py
retrai/cli/: app.py
retrai/events/: bus.py  types.py
retrai/goals/: ai_eval.py  base.py  bun_goal.py  cargo_goal.py  detector.py  go_goal.py  make_goal.py  npm_goal.py  perf_goal.py  planner.py  pyright_goal.py  pytest_goal.py  registry.py  shell_goal.py  sql_goal.py
retrai/llm/: factory.py
retrai/server/: app.py  run_manager.py
retrai/server/routes/: runs.py  ws.py
retrai/tools/: bash_exec.py  file_read.py  file_write.py  pytest_runner.py
retrai/tui/: app.py
tests/: conftest.py
tests/integration/: test_graph_smoke.py  test_server.py
tests/unit/: test_agent_state.py  test_config.py  test_events.py  test_goals.py  test_routers.py  test_run_manager.py  test_tools.py
(+1 files in other folders)
